--- a/stylee_pesan.css
+++ b/stylee_pesan.css
@@ -15,6 +15,7 @@ body {
   -webkit-box-shadow: 3px 10px 25px -19px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 3px 10px 25px -19px rgba(0, 0, 0, 0.75);
   box-shadow: 3px 10px 25px -19px rgba(0, 0, 0, 0.75);
+  
 }
 .navbar ul {
   list-style: none;
@@ -68,16 +69,18 @@ body {
 
 .sidebar {
   background-color: #122363;
-  width: 30%;
-  height: 90vh;
-  padding: 17px 10px 10px 10px;
-  /* display: flex; */
-  /* border: 1px solid black; */
-  /* display: inline-block; */
-  /* margin-left: -4px; */
-  flex-direction: column;
-  display: none;
+  width: 400px;
+  height: 400vh; /* Tinggi sidebar penuh, sesuai layar */
+  padding: 17px 10px;
+  position: fixed; /* Agar sidebar tetap di tempat */
+  right: 0; /* Tempel di kanan layar */
+  top: 75px; /* Di bawah navbar */
+  overflow-y: auto; /* Scroll jika konten terlalu banyak */
+  z-index: 100; /* Di atas elemen lain */
+  border-radius: 10px 0 0 10px; /* Sudut melengkung hanya di kiri */
+  box-shadow: -3px 0 10px rgba(0, 0, 0, 0.1);
 }
+
 
 .card-order {
   width: 91%;
@@ -145,13 +148,14 @@ body {
   box-shadow: 9px 9px 18px -13px rgba(0, 0, 0, 0.75);
 }
 
-.card img {
-  width: 92%;
-  height: 80%;
-  margin: 10px 10px 0px 10px;
-  border-radius: 10px;
-  /* display: flex; */
+.card img, 
+.menu-item img {
+  width: 100%;
+  height: 200px; /* Adjust the height as needed */
+  object-fit: cover; /* Ensures the image fills the box while maintaining its aspect ratio */
+  border-radius: 10px; /* Optional: If you want rounded corners for the images */
 }
+
 
 .card p {
   margin-left: 10px;
@@ -262,3 +266,182 @@ body {
 .person span {
   font-size: 14px;
 }
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
+
+* {
+  margin: 0;
+  font-family: "Poppins", sans-serif;
+}
+body {
+  background-color: #e3e9ff;
+}
+.navbar {
+  width: 100%;
+  height: 75px;
+  display: flex;
+  background-color: white;
+  -webkit-box-shadow: 3px 10px 25px -19px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 3px 10px 25px -19px rgba(0, 0, 0, 0.75);
+  box-shadow: 3px 10px 25px -19px rgba(0, 0, 0, 0.75);
+}
+.navbar ul {
+  list-style: none;
+  margin: 20px;
+  background-color: white;
+}
+.navbar ul li {
+  display: inline;
+  font-size: 20px;
+  font-weight: 500;
+  padding-right: 20px;
+  background-color: white;
+}
+.navbar ul li a {
+  text-decoration: none;
+  color: #122363;
+}
+.navbar ul li a:hover {
+  color: rgb(247, 143, 7);
+}
+.navbar img {
+  width: 70px;
+  height: 70px;
+  padding: 5px 0px 5px 35px;
+  margin: 0;
+  align-content: center;
+}
+.main {
+  position: relative;
+  justify-content: center;
+  display: flex;
+  overflow: hidden;
+}
+.content {
+  width: 70%;
+  text-align: justify;
+  padding: 15px;
+  margin: 0;
+}
+.sidebar {
+  background-color: #122363;
+  width: 400px;
+  height: 400vh;
+  padding: 17px 10px;
+  position: fixed;
+  right: 0;
+  top: 75px;
+  overflow-y: auto;
+  z-index: 100;
+  border-radius: 10px 0 0 10px;
+  box-shadow: -3px 0 10px rgba(0, 0, 0, 0.1);
+}
+.card-order {
+  width: 91%;
+  height: 50px;
+  margin: 10px 10px 10px 15px;
+  background-color: white;
+  display: flex;
+  text-align: center;
+  border-radius: 10px;
+  -webkit-box-shadow: 9px 9px 18px -13px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 9px 9px 18px -13px rgba(0, 0, 0, 0.75);
+  box-shadow: 9px 9px 18px -13px rgba(0, 0, 0, 0.75);
+}
+.card-order img {
+  width: 50px;
+  border-radius: 10px;
+  margin: 5px;
+}
+.card-order p {
+  padding: 10px;
+  font-size: 17px;
+  width: 70%;
+  font-weight: 500;
+  color: #4e4e4e;
+  text-align: left;
+}
+.card-order span {
+  padding: 10px;
+  font-size: 17px;
+  font-weight: 500;
+  color: #4e4e4e;
+  width: 1%;
+}
+.card-order button {
+  background-color: rgb(214, 11, 11);
+  border-radius: 10px;
+  padding: 0;
+  margin: 10px 0px 10px 20px;
+  width: 80px;
+  height: 30px;
+  border: none;
+  color: whitesmoke;
+  font-weight: 500;
+  align-items: flex-end;
+}
+.card-order button:hover {
+  background-color: rgb(163, 12, 12);
+}
+.card {
+  width: 280px;
+  height: max-content;
+  background-color: white;
+  border-radius: 10px;
+  margin: 10px;
+  display: inline-block;
+  -webkit-box-shadow: 9px 9px 18px -13px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 9px 9px 18px -13px rgba(0, 0, 0, 0.75);
+  box-shadow: 9px 9px 18px -13px rgba(0, 0, 0, 0.75);
+}
+.card img, 
+.menu-item img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+@media (max-width: 768px) {
+  .sidebar {
+    width: 100%;
+    height: 120px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    border-radius: 10px 10px 0 0;
+    overflow-x: auto;  /* Untuk scroll horizontal jika konten terlalu lebar */
+    display: flex;
+    transition: bottom 0.3s ease-in-out;
+    padding: 10px;
+    background-color: #122363; /* Pastikan sidebar tetap terlihat */
+  }
+
+  .main {
+    flex-direction: column;
+    padding-bottom: 130px; /* Memberikan ruang untuk sidebar yang ada di bawah */
+  }
+
+  .content {
+    width: 100%;
+  }
+
+  .navbar {
+    flex-direction: column;
+    height: auto;
+  }
+
+  .navbar ul {
+    text-align: center;
+    padding: 10px;
+  }
+
+  .navbar ul li {
+    display: block;
+    padding: 5px 0;
+  }
+
+  .card {
+    width: 100%;
+  }
+}
+
