--- a/stylee_pesan.css
+++ b/stylee_pesan.css
@@ -340,13 +340,12 @@ body {
   transition: all 0.3s ease-in-out;
 }
 
-/* Responsif untuk layar kecil (Mobile) */
 @media screen and (max-width: 768px) {
   .sidebar {
-    position: fixed; /* Agar sidebar tetap di layar */
-    bottom: 0; 
-    left: 50%; 
-    transform: translateX(-50%); /* Pusatkan di layar */
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
     width: 100%;
     max-width: 330px;
     height: 350px;
@@ -362,8 +361,8 @@ body {
 
   /* Mode minimized */
   .sidebar.minimized {
-    height: 50px; /* Ukuran minimal */
-    transform: translateX(-50%) translateY(300px); /* Turunkan ke bawah */
+    height: 50px;
+    transform: translateX(-50%) translateY(300px);
   }
 
   /* Tombol untuk minimize/memperbesar */
@@ -397,10 +396,7 @@ body {
     padding: 5px 10px;
     border-radius: 5px;
     cursor: pointer;
-  } 
-
-
-
+  }
 
 .card-order {
   width: 91%;
